k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinook-api
  namespace: chinook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chinook-api
  template:
    metadata:
      labels:
        app: chinook-api
    spec:
      containers:
        - name: chinook-api
          image: ghcr.io/fjbernardez/chinook-text-to-sql:develop
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
