k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chinook-api-service
  namespace: chinook
spec:
  selector:
    app: chinook-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
